----------
v3.2.1-git
----------

[mms] Add support for a negative regex test to the Maildrop driver.
[mms] Add support for a negative regex test to the Sieve driver (Request
      #12671; Pete Beardmore <pete.beardmore@msn.com>).
[mms] Fix vacation in the maildrop driver (Bug #13415;
      balestrieri@mag-data.com).


------
v3.2.0
------

[mms] Fix mailbox selection on Spam page (Bug #13298).
[mms] Fix regression in deactivating scripts (Bug #13297).


---------
v3.2.0RC1
---------

[jan] Update Polish translation (Maciej Uhlig <maciej.uhlig@us.edu.pl>).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


-----------
v3.2.0beta2
-----------

[mms] Honor 'auto_update' preference when re-sorting filters list (Bug #13216).
[mms] Fix regression in copying a rule when storing in SQL backend (Bug
      #13213).


-----------
v3.2.0beta1
-----------

[jan] Pass current vacation addresses to hook
      (skhorde@smail.inf.fh-bonn-rhein-sieg.de, Request #13185).


------------
v3.2.0alpha1
------------

[mms] Use standardized 'enotify' sieve extension (RFC 5435) by default instead
      of deprecated 'notify' extension (Request #8784).
[mms] Use standardized 'imap4flags' sieve extension (RFC 5232) by default
      instead of deprecated 'imapflags' extension (Request #8784).
[mms] Add ability to filter rules by mailbox.
[mms] Add 'max_forward' permission (Request #10332).
[mms] Permissions can now be applied per backend, rather than globally.
[mms] Replace max blacklist/whitelist configuration parameters with equivalent
      permissions options.
[mms] Sorting of rules now done via drag/drop javascript (Request #1993).
[jan] Make shares table compatible with Oracle.
[mms] Validate e-mail addresses on the forward and vacation pages (Request
      #7249).
[mms] Add 'newEmailFilter' API link.


------
v3.1.5
------

[mms] Fix blacklist/whitelist matching with IMAP backend (Bug #13031).