@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [mms] Fix performing more than one filter drag/drop action on a single page (Bug #13434).
 * [mms] Add support for a negative regex test to the Maildrop driver.
 * [mms] Add support for a negative regex test to the Sieve driver (Request #12671; Pete Beardmore &lt;pete.beardmore@msn.com&gt;).
 * [mms] Fix vacation in the maildrop driver (Bug #13415; balestrieri@mag-data.com).
@@ -1492,6 +1493,7 @@
    <date>2014-07-08</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [mms] Fix performing more than one filter drag/drop action on a single page (Bug #13434).
 * [mms] Add support for a negative regex test to the Maildrop driver.
 * [mms] Add support for a negative regex test to the Sieve driver (Request #12671; Pete Beardmore &lt;pete.beardmore@msn.com&gt;).
 * [mms] Fix vacation in the maildrop driver (Bug #13415; balestrieri@mag-data.com).
